Add Slack to README, and correct model run in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 # command to run tests
 script:
   - pytest
-  - python COSIPY.oy
+  - python COSIPY.py
 
 # Push the results back to coveralls
 after_success:
