Test and print version number of requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,12 @@ env:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip freeze
 
 # command to run tests
 script:
   - pytest
-  - python COSIPY.py
+#  - python COSIPY.py
 
 # Push the results back to coveralls
 after_success:
