Delete Python 3.4 from Travis, because it does not work, change Pytest run, that coverage report is submitted

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 
 # Specify Python versions
 python:
-  - "3.4"
   - "3.5"
   - "3.6"
   - "3.7"
@@ -19,7 +18,7 @@ install:
 
 # command to run tests
 script:
-  - pytest
+  - coverage run -m --source=. pytest 
   - python COSIPY.py
 
 # Push the results back to coveralls
