--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
 
 # command to run tests
 script:
-       #  - pytest
-  - coverage run -m --source=. pytest 
+  - pytest
+#  - coverage run -m --source=. pytest 
 #  - python COSIPY.py
 
 # Push the results back to coveralls
