--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install pytest
   - pip freeze
 
 # command to run tests
